# on-air

./: Cargo.toml  descriptor
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/linux/: Cargo.toml
crates/linux/src/: lib.rs
crates/macos/: Cargo.toml
crates/macos/src/: lib.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/windows/: Cargo.toml
crates/windows/src/: lib.rs
src/: main.rs
